--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="title_activity_status">Status of the Country</string>
 
     <string name="title_activity_profile">My Profile</string>
+
+    <string name="title_activity_report">ReportActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
