--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <string name="title_activity_confirm">ConfirmActivity</string>
+
+    <string name="title_activity_sign_up">SignUpActivity</string>
 </resources>
